--- a/SourceStack/Pages/Privacy.cshtml
+++ b/SourceStack/Pages/Privacy.cshtml
@@ -2,6 +2,11 @@
 @model PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
+
+}
+@{
+    Layout = "Layout/_Dual";
+
 }
 <h1>@ViewData["Title"]</h1>
 
