--- a/SourceStack/Pages/Shared/_Layout.cshtml
+++ b/SourceStack/Pages/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>忘了·一起帮</title>
+    <title>@ViewData["Title"]--源站 </title>
     <link href="/image/logo-big.ico" rel="shortcut icon" media="screen" type="image/x-icon" />
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />
@@ -15,12 +15,10 @@
 
             <section style="margin-left:40px;">
                 <a href="#">
-                    <img src="/image/log.jpg" alt="一起帮logo" style="margin-bottom:4px;" />
+                    <img src="/images/logo-big.ico" alt="一起帮logo" style="margin-bottom:4px;" />
                 </a>
                 <span style="font-size:18px; font-weight:600;color:#777777">一起帮</span>
                 <span class="text-muted">·网络互助平台</span>
-
-
             </section>
             <nav style="margin-left:600px;">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +60,7 @@
                                 文章
                             </a>
                             <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" asp-page="/Article/Index" asp-route-id="1">
                                     <i class="fa fa-list" aria-hidden="true"></i>
                                     列表
                                 </a>
@@ -75,35 +73,30 @@
                                 未登录
                             </a>
                             <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> 登录</a>
-                                <a class="dropdown-item" href="#"> <i class="fa fa-registered" aria-hidden="true"></i> 注册</a>
-                                <a class="dropdown-item" href="#"> <i class="fa fa-lock" aria-hidden="true"></i>忘记密码</a>
+                                <a class="dropdown-item" href="/Log/On"><i class="fa fa-sign-in" aria-hidden="true"></i> 登录</a>
+                                <a class="dropdown-item" href="/Register/Home"> <i class="fa fa-registered" aria-hidden="true"></i> 注册</a>
+                                <a class="dropdown-item" href="/Password/Forget"> <i class="fa fa-lock" aria-hidden="true"></i>忘记密码</a>
                             </div>
                         </li>
                     </ul>
                 </div>
             </nav>
         </nav>
-        <div class="container ">
-
-            <div style="background-color:#eeeeee;margin-bottom:15px">
-                <i class="fa fa-calendar" aria-hidden="true"></i>用户<span class="text-primary">Edwin</span>使用了<span class="text-warning">叶飞</span>的邀请码进行注册，系统奖励<span class="text-warning">叶飞</span><i class="fa fa-tint" aria-hidden="true"></i><span class="dot">帮帮点</span>2点
-                <i class="fa fa-hand-o-right text-primary " style="float:right;margin-right:10px;margin-top:4px;" aria-hidden="true">  全部消息</i>
-            </div>
+        <div class="container" style="background-color:#eeeeee;margin-top:80px">
+            <i class="fa fa-calendar" aria-hidden="true"></i>用户<span class="text-primary">Edwin</span>使用了<span class="text-warning">叶飞</span>的邀请码进行注册，系统奖励<span class="text-warning">叶飞</span><i class="fa fa-tint" aria-hidden="true"></i><span class="dot">帮帮点</span>2点
+            <i class="fa fa-hand-o-right text-primary " style="float:right;margin-right:10px;margin-top:4px;" aria-hidden="true">  全部消息</i>
         </div>
-
     </header>
+    <br />
+    <br />
 
 
-
-
-
-
+    <a href="" style="float:right;margin-top:-25px; background-color:#a6ffe1;border-radius:5px;"><i class="fa fa-reply" aria-hidden="true"></i> 返回</a>
 
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+        @RenderBody()
+
     </div>
 
     <footer class="container ">
