--- a/SourceStack/Pages/Message/Index.cshtml
+++ b/SourceStack/Pages/Message/Index.cshtml
@@ -13,7 +13,7 @@
         <input  type="hidden" asp-for="@Model.Messages[i].Id"/>
         <br />
     }
-    <button  type ="submit" >提交</button>
+    <button  type ="submit" >已读就勾选</button>
 
 
 
