--- a/SourceStack/Pages/Message/Index.cshtml
+++ b/SourceStack/Pages/Message/Index.cshtml
@@ -2,7 +2,9 @@
 @model SourceStack.Pages.Message.IndexModel
 @{
 }
+<partial name="~/View/_User.cshtml" />
 <form method="post" action="">
+    
 
     @for (int i = 0; i < Model.Messages.Count; i++)
     {
