--- a/YQBangMVC/Views/Shared/_Layout.cshtml
+++ b/YQBangMVC/Views/Shared/_Layout.cshtml
@@ -1,43 +1,186 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 我的 ASP.NET 应用程序</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>-源站 </title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("应用程序名称", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("主页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("关于", "About", "Home")</li>
-                    <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
-                </ul>
+    <header>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <a href="/" data-toggle="tooltip" title="返回首页">
+                    <img src="/Images/logo-big.ico" alt="一起帮Logo" class="pull-left" />
+                </a>
+                <p class="navbar-text pull-left">
+                    <span style="font-size:18px; font-weight:600;">一起帮</span>
+                    <span class="visible-md-inline visible-lg-inline">· 网络互助平台</span>
+                </p>
+                <a href="/Message/Mine" class="navbar-text pull-left" style="font-size:18px; margin-left:10px;">
+                    <span class="fa fa-bell  pull-left hide" style="color: darkblue;" zyf-bell></span>
+                </a>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-question-circle"></span> 求助</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li class="dropdown-header">督导班</li>
+                                <li><a href="/Course/Confusion/New"><span class="fa fa-eye"></span> 督导班</a> </li>
+                                <li><a href="/Problem?excludeCanceled=true&excludeRewarded=true"><span class="fa fa-list"></span> 列表</a> </li>
+                                <li><a href="/Course/Confusion/New"><span class="fa fa-edit"></span> 疑问发布</a> </li>
+                                <li><a href="/Course/Confusion"><span class="fa fa-list"></span> 疑问列表</a> </li>
+                                <li class="divider"></li>
+                                <li><a href="/Problem?excludeCanceled=true&excludeRewarded=true"><span class="fa fa-list"></span> 列表</a> </li>
+                                <li><a href="/Problem/New"><span class="fa fa-edit"></span> 发布</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span zyf-ducu-notices class="fa fa-eye"></span> 督促</a>
+                            <ul class="dropdown-menu" role="menu" zyf-navigator-ducu>
+                                <li><a href="/Plan/New"><span class="fa fa-edit fa-fw"></span> 求督促</a></li>
+                                <li><a href="/Plan"><span class="fa fa-gavel fa-fw"></span> 督促别人</a></li>
+                                <li><a href="/Plan?my=f&full=False&due=False&expire=False&Frozen=False"><span class="fa fa-list fa-fw"></span> 我的目标</a></li>
+                                <li><a href="/Plan?my=s&full=False&due=False&expire=True&Frozen=False"><span class="fa fa-list fa-fw"></span> 我的督促</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="/Article" class="dropdown-toggle" data-toggle="dropdown"><span class="iconfont icon-articles"></span> 文章</a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="/Article"><span class="fa fa-list fa-fw"></span> 列表</a> </li>
+                                <li><a href="/Article/_Apply" zyf-article-apply-link><span class="fa fa-folder-open fa-fw"></span> 开通</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a zyf-navigator-loginstatus class="text-primary dropdown-toggle" data-toggle="dropdown" href="#" role="button">
+                                <span class="text-primary"><span class="fa fa-user-circle-o"></span><span zyf-current-username> Zoulily</span> </span>
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+
+                                <li class="text-warning"><a zyf-newbie-reminder-show href=""><span class="fa fa-list fa-fw"></span> 新手任务</a></li>
+                                <li><a href="/User/Single"><span class="fa fa-home fa-fw"></span> 我的主页</a></li>
+                                <li class="divider"></li>
+                                <li data-toggle="tooltip" title="明天16点54分更新">
+                                    <a href="/FAQ/Bean">
+                                        <span class="bean"><strong class="iconfont icon-beans"></strong> 帮帮豆</span>
+                                        ：<span zyf-nav-current-ballots>1</span> 颗
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Credit">
+
+                                        <span class="water"><span class="iconfont icon-drips"></span> 帮帮点</span>
+                                        ：<span zyf-nav-current-credit>18</span> 点 ①
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Money/Owner">
+
+                                        <span class="credit"><span class="iconfont icon-money"></span> 帮帮币</span>
+                                        ：<span zyf-nav-current-money>0</span> 枚
+                                    </a>
+                                </li>
+                                <li class="divider"></li>
+                                <li class="dropdown-header"><span class="fa fa-pencil-square-o"></span> 修改</li>
+                                <li><a href="/Password/Change?prepage=%2fArticle%2f589"><span class="fa fa-lock fa-fw"></span> 我的密码</a></li>
+                                <li><a href="/Contact/Edit?prepage=%2fArticle%2f589"><span class="fa fa-envelope fa-fw"></span> 联系方式</a></li>
+                                <li><a href="/Profile/Write?prepage=%2fArticle%2f589"><span class="fa fa-camera fa-fw"></span> 个人资料</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/Log/Off?prepage=%2fArticle%2f589"><span class="fa fa-sign-out"></span> 退出登录</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-tachometer"></span> 后台<span class="caret"></span></a>
+                            <ul class="dropdown-menu dropdown-menu-bottom-fix" role="menu">
+                                <li><a href="/Invite"><span class="fa fa-user-plus fa-fw"></span> 邀请注册</a> </li>
+                                <li><a href="/Message/Mine"><span class="fa fa-bell fa-fw"></span> 我的消息</a> </li>
+                                <li><a href="/Draft"><span class="fa fa-file-o fa-fw"></span> 我的草稿</a></li>
+                                <li class="divider"></li>
+                                <li class="dropdown-header">广告推广</li>
+                                <li><a href="/AdInContact/Write?prepage=%2fArticle%2f589"><span class="fa fa-link"></span> 联系方式</a></li>
+                                <li><a href="/AdInWidget/Write?prepage=%2fArticle%2f589"><span class="fa fa-link"></span> 侧边栏</a></li>
+                                <li class="divider"></li>
+                                <li class="dropdown-header">帮帮币</li>
+                                <li><a href="/MoneyTrade/Market?prepage=%2fArticle%2f589"><b class="iconfont icon-shopping-cart-buy"></b> 购买</a></li>
+                                <li><a href="/MoneyTrade/Sale?prepage=%2fArticle%2f589"><b class="iconfont icon-shopping-cart-sell"></b> 出售</a></li>
+                                <li><a href="/MoneyTrade/BuyList"><span class="fa fa-list"></span> 已购买</a></li>
+                                <li><a href="/MoneyTrade/SaleList"><span class="fa fa-list"></span> 已出售</a></li>
+                            </ul>
+                        </li>
+                        @if (ViewData["HasLogOn"] == null)
+                        {
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                未登录
+                            </a>
+
+                        }
+                        else
+                        {
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                已登录
+                            </a>
+                            <a href="/Log/Off">退出登录</a>
+
+                        }
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 应用程序</p>
-        </footer>
-    </div>
+    </header>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <div class="container">
+
+        @RenderBody()
+
+    </div>
+    <a zyf-global-feedback href="/Contact/Us" style="bottom:132px;" class="feedback flag text-center">
+        <span class="fa fa-question-circle-o"></span><br />帮助
+    </a>
+    <a zyf-global-feedback href="/Suggest/New" style="bottom:80px;" class="feedback flag text-center">
+        <span class="fa fa-comments-o"></span><br />反馈
+    </a>
+    <script>
+        $(".feedback").css("right", function () {
+            return getFlagPosition(this);
+        })
+    </script>
+    <footer class="container ">
+        <div class="float-left">
+            <a href="/About/Us">关于我们</a>"|"
+            <a href="/About/Us">常见问题</a>"|"
+            <a href="/About/Us">意见建议</a>"|"
+            <a href="/About/Us">历史通知</a>"|"
+            <a href="/About/Us" style="color:#3c763d">友情馈赠</a>"|"
+            <a href="/About/Us">融资2018</a>"|"
+        </div><br />
+        <div class="float-left">
+            友情链接
+        </div>
+        <br />
+        <p class="pull-right float-right"><a href="http://www.miitbeian.gov.cn">渝ICP备18007191号（备案）</a>© 2020 - 首顾科技</p>
+
+    </footer>
+
+
+
+    @*@RenderSection("Scripts", required: false)*@
+
+
+
 </body>
 </html>
+
