--- a/YQBangMVC/Views/Register/Index.cshtml
+++ b/YQBangMVC/Views/Register/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model YQBangMVC.Models.RegisterModel
+﻿@model SRV.ViewModel.RegisterModel
 @{
-    ViewBag.Title = "注册";
+    //ViewBag.Title = "注册";
     Layout = "~/Views/Shared/_Dual_551.cshtml";
     ViewData["Title"] = "注册";
 }
@@ -12,34 +12,30 @@
         <div class="text-right" style="padding-bottom:15px;"><a><i class="fa fa-question-circle"></i>为什么需要邀请</a></div>
         <div class="form-group">
             <label for="exampleInputEmail1">邀请人：（* 必填，<a href="#">没有邀请人</a>） </label>
-            @Html.TextBoxFor(m => m.InviterName ,new { type = "text", @class="form-control"})
-            @Html.ValidationMessageFor(m => m.InviterName)
+            @Html.TextBoxFor(m=>m.InviterName, new { type = "text", @class = "form-control" })
+            @Html.ValidationMessageFor(m => m)
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">邀请码：（* 必填） </label>
-            <input type="text" class="form-control" asp-for="InviteCode">
             @Html.TextBoxFor(m => m.InviterNumber, new { ype = "text", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.InviterNumber)
-        </div>xc
+        </div>
 
         <div class="form-group">
             <label for="exampleInputEmail1">用户名：（* 必填） </label>
-            @*<input type="text" class="form-control" asp-for="NewUser.Name">
-                <span asp-validation-for="NewUser.Name"></span>*@
-            @Html.TextBoxFor(m => m.Name,new { type = "text" ,@class="form-control" })
+          
+            @Html.TextBoxFor(m => m.Name, new { type = "text", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Name)
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">密码：（* 必填） </label>
-            @*<input type="password" class="form-control" asp-for="NewUser.Password">
-                <span asp-validation-for="NewUser.Password"></span>*@
-            @Html.TextBoxFor(m => m.Password,new { type = "password" ,@class="form-control" })
+            @Html.TextBoxFor(m => m.Password, new { type = "password", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Password)
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">验证密码：（* 必填） </label>
-            <input type="password" class="form-control" asp-for="ComfirmPassword" placeholder="和密码相同">
-            <span asp-validation-for="ComfirmPassword"></span>
+            @Html.TextBoxFor(m=>m.ComfirmPassword, new { type = "password", @class = "form-control" })
+            @Html.ValidationMessageFor(m=>m.ComfirmPassword)
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">验证码：（* 必填） </label>
@@ -51,21 +47,15 @@
         <button class="btn btn-primary" type="submit">提交</button>
         <button class="btn btn-light" type="reset">重置</button>
         <a href="logon.html" class=" btn float-right text-primary"><i class="fa fa-sign-in" aria-hidden="true"></i>登录</a>
-
     </section>
 
 }
 <!--<form method="post" class="">-->
-
-
-
-
-
-    @*<div class="form-group">
-            <label for="exampleInputEmail1">个人主页：（* 必填） </label>
-            <input type="text" class="form-control" asp-for="HomeUrl">
-            <span asp-validation-for="HomeUrl"></span>
-        </div>*@
+@*<div class="form-group">
+        <label for="exampleInputEmail1">个人主页：（* 必填） </label>
+        <input type="text" class="form-control" asp-for="HomeUrl">
+        <span asp-validation-for="HomeUrl"></span>
+    </div>*@
 
 
 <!--</form>-->
