--- a/YQBangMVC/Views/Home/Index.cshtml
+++ b/YQBangMVC/Views/Home/Index.cshtml
@@ -1,31 +1,114 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+
+    Layout = "~/Views/Shared/_Dual_551.cshtml";
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div>
+    <a href="none" style="padding-left:260px;">更多历史</a>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<ul class="list-unstyled" style="overflow-y:scroll;height:600px">
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/1/29 20:08:15 <a href="none">叶飞</a><a href="/credit">⑩</a></h5>
+            <span>@@<a href="none"> xtayaitak</a><a href="/credit">①</a></span><br />
+            <span> 有没有打cs1.6的...</span><br />
+            <span>哈哈……没有</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/1/29 20:08:15<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+            <span>喵了个咪</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/3 10:54:01<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+            <span>欢迎注册本站学习，邀请人：喵了个咪，邀请码0434</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/3 11:14:49<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+            <span>http://http://17bang.ren/register/home?name=%e5%96%b5%e4%ba%86%e4%b8%aa%e5%92%aa&code=0434</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+            <span>啥?</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/9 14:03:27<a href="none">u33445687</a><a href="/credit">③</a></h5>
+            <span>666666</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+            <span>啥?</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/13 19:59:29<a href="none">云飞飞飞</a><a href="/credit">①</a></h5>
+            <span>666666666</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/17 0:24:57<a href="none">疾风小白</a><a href="/credit">①</a></h5>
+            <span>hai</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/18 15:41:29<a href="none">harriethwikk</a><a href="/credit">②</a></h5>
+            <span>啥?</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+            <span>6</span>
+        </div>
+    </li>
+    <li class="media">
+        <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+        <div class="media-body ml-2">
+            <h5 class="mt-0 mb-1">2020/2/19 12:39:21<a href="none">harriethwikk</a><a href="/credit">②</a></h5>
+            <span>嗨</span>
+        </div>
+    </li>
+</ul>
+
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="我来说两句" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <div class="input-group-append">
+        <button type="button" class="btn btn-outline-secondary">发送</button>
     </div>
 </div>
+@section Description{
+
+    }
+<script>
+    window.load = function () {
+
+
+
+    }
+</script>
