--- a/SourceStack/Pages/Shared/_Layout.cshtml
+++ b/SourceStack/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <title>@ViewData["Title"]--源站 </title>
     <link href="/image/logo-big.ico" rel="shortcut icon" media="screen" type="image/x-icon" />
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />
+    @*<link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />*@
     <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
 </head>
@@ -137,9 +137,9 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />
+    @*<link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />*@
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="/css/bootstripCommon.css" rel="stylesheet" />
+    @*<link href="/css/bootstripCommon.css" rel="stylesheet" />*@
 
     @RenderSection("Scripts", required: false)
 </body>
