--- a/SourceStack/Pages/Home/Index.cshtml
+++ b/SourceStack/Pages/Home/Index.cshtml
@@ -1,4 +1,129 @@
 ﻿@page
 @model SourceStack.Pages.Home.IndexModel
 @{
+    Layout = "Layout/_Dual";
 }
+<div class="" style="overflow:scroll">
+    <div>
+        <a href="none" style="padding-left:260px;">更多历史</a>
+    </div>
+    <ul class="list-unstyled" style="">
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/1/29 20:08:15 <a href="none">叶飞</a><a href="/credit">⑩</a></h5>
+                <span>@@<a href="none"> xtayaitak</a><a href="/credit">①</a></span><br />
+                <span> 有没有打cs1.6的...</span><br />
+                <span>哈哈……没有</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/1/29 20:08:15<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>喵了个咪</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/1/29 20:08:15<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>喵了个咪</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/1/29 20:08:15<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>喵了个咪</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/1/29 20:08:15<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>喵了个咪</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/3 10:54:01<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>欢迎注册本站学习，邀请人：喵了个咪，邀请码0434</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/3 11:14:49<a href="none">喵了个咪</a><a href="/credit">④</a></h5>
+                <span>http://http://17bang.ren/register/home?name=%e5%96%b5%e4%ba%86%e4%b8%aa%e5%92%aa&code=0434</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+                <span>啥?</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/9 14:03:27<a href="none">u33445687</a><a href="/credit">③</a></h5>
+                <span>666666</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+                <span>啥?</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/13 19:59:29<a href="none">云飞飞飞</a><a href="/credit">①</a></h5>
+                <span>666666666</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/17 0:24:57<a href="none">疾风小白</a><a href="/credit">①</a></h5>
+                <span>hai</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/18 15:41:29<a href="none">harriethwikk</a><a href="/credit">②</a></h5>
+                <span>啥?</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/7 3:05:18<a href="none"> lk6321</a><a href="/credit">①</a></h5>
+                <span>6</span>
+            </div>
+        </li>
+        <li class="media">
+            <button type="button" class="btn btn-outline-secondary">@@TA<br />回复</button>
+            <div class="media-body ml-2">
+                <h5 class="mt-0 mb-1">2020/2/19 12:39:21<a href="none">harriethwikk</a><a href="/credit">②</a></h5>
+                <span>嗨</span>
+            </div>
+        </li>
+    </ul>
+</div>
+@section Description{ 
+    <div zyf-ad-chats="" id="ad-chats" style="top: 120px;">
+        <h3>“源栈”Web开发培训班 <br> <span style="color:red"><span class="fa fa-fire"></span> 火热</span> 招生中：</h3>
+        <p>线上：全程直播，<b>免费</b>收看</p>
+        <p>线下：<b>灵活</b>学制，拎包入住</p>
+        <p>有意向的同学，可以加QQ群：326801052</p>
+        <img class="img-responsive center-block" src="/images/二维码.png" title="QQ学习群：326801052">
+    </div>
+}
+
