--- a/SourceStack/Pages/Message/Index.cshtml
+++ b/SourceStack/Pages/Message/Index.cshtml
@@ -3,20 +3,29 @@
 @{
 }
 <partial name="~/View/_User.cshtml" />
-<form method="post" action="">
-    
-
+<label class="checkbox-inline">
+    <input type="checkbox" id="selectall"> 全选
+</label>
+<form method="post" action=""> 
     @for (int i = 0; i < Model.Messages.Count; i++)
     {
-
-        <input asp-for="@Model.Messages[i].Selected" />
+       <input asp-for="@Model.Messages[i].Selected"  name="message" />
         <span>@Model.Messages[i].CreateTime</span>
         <span>@Model.Messages[i].Content</span>
         <input  type="hidden" asp-for="@Model.Messages[i].Id"/>
         <br />
     }
     <button  type ="submit" >已读就勾选</button>
-
-
-
 </form>
+<script src="~/js/Event.js"></script>
+@*<script>
+    document.getElementById("selectall").addEventListener("change",
+        function () {
+            var messages = document.getElementsByName("message");
+            for (let  i = 0; i < messages.length; i++) {
+                messages[i].checked = this.checked;
+            }
+        }
+    )
+  
+</script>*@
