--- a/SourceStack/Pages/Register/Home.cshtml
+++ b/SourceStack/Pages/Register/Home.cshtml
@@ -10,57 +10,57 @@
         font-size: 12px;
     }
 </style>
-<div asp-validation-summary="ModelOnly" >
+<div asp-validation-summary="ModelOnly">
 
 </div>
-    @*<a href="" style="float:right;margin-top:-25px; background-color:#a6ffe1;border-radius:5px;"><i class="fa fa-reply" aria-hidden="true"></i> 返回</a>
+@*<a href="" style="float:right;margin-top:-25px; background-color:#a6ffe1;border-radius:5px;"><i class="fa fa-reply" aria-hidden="true"></i> 返回</a>
     <hr />*@
-  
-        <form  method ="post" class="">
-            <section style="padding:10px;border:2px dashed #f1f1f1;background-color:lightyellow;border-radius: 5px;margin-bottom:20px;">
-                <div class="text-right" style="padding-bottom:15px;"><a><i class="fa fa-question-circle"></i>为什么需要邀请</a></div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">邀请人：（* 必填，<a href="#">没有邀请人</a>） </label>
-                    <input type="text" class="form-control" asp-for=" NewUser.Inviter.Name">
-                    <span asp-validation-for="NewUser.Inviter.Name"></span>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">邀请码：（* 必填） </label>
-                    <input type="text" class="form-control" asp-for="InviteCode" >
-                    <span asp-validation-for="InviteCode"></span>
-                </div>
-            </section>
-            <div class="form-group">
-                <label for="exampleInputEmail1">用户名：（* 必填） </label>
-                <input type="text" class="form-control" asp-for="NewUser.Name" >
-                <span asp-validation-for="NewUser.Name"></span>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">密码：（* 必填） </label>
-                <input type="password" class="form-control"asp-for="NewUser.Password" >
-                <span asp-validation-for="NewUser.Password"></span>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">验证密码：（* 必填） </label>
-                <input type="password" class="form-control" asp-for="ComfirmPassword" placeholder="和密码相同">
-                <span asp-validation-for="ComfirmPassword"></span>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">验证码：（* 必填） </label>
-                <input type="text" class="form-control" style="width:100px"asp-for="VerifyCode">
-                <span asp-validation-for="VerifyCode"></span>
-                <span style="display:inline-block">点击输入框显示</span>
-            </div>
-            @*<div class="form-group">
-                <label for="exampleInputEmail1">个人主页：（* 必填） </label>
-                <input type="text" class="form-control" asp-for="HomeUrl">
-                <span asp-validation-for="HomeUrl"></span>
-            </div>*@
-            <button class="btn btn-primary" type="submit">提交</button>
-            <button class="btn btn-light" type="reset">重置</button>
-            <a href="logon.html" class=" btn float-right text-primary"><i class="fa fa-sign-in" aria-hidden="true"></i>登录</a>
 
-        </form>
+<form method="post" class="">
+    <section style="padding:10px;border:2px dashed #f1f1f1;background-color:lightyellow;border-radius: 5px;margin-bottom:20px;">
+        <div class="text-right" style="padding-bottom:15px;"><a><i class="fa fa-question-circle"></i>为什么需要邀请</a></div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">邀请人：Zouli（* 必填，<a href="#">没有邀请人</a>） </label>
+            <input type="text" id="" class="form-control" asp-for=" NewUser.Inviter.Name">
+            <span asp-validation-for="NewUser.Inviter.Name"></span>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">邀请码：1234（* 必填） </label>
+            <input type="text" class="form-control" asp-for="InviteCode">
+            <span asp-validation-for="InviteCode"></span>
+        </div>
+    </section>
+    <div class="form-group">
+        <label for="exampleInputEmail1">用户名：（* 必填） </label>
+        <input type="text" class="form-control" asp-for="NewUser.Name" id="username">
+        <span asp-validation-for="NewUser.Name"></span>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputEmail1">密码：（* 必填） </label>
+        <input type="password" id="password" class="form-control" asp-for="NewUser.Password">
+        <span asp-validation-for="NewUser.Password"></span>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputEmail1">验证密码：（* 必填） </label>
+        <input type="password"  class="form-control" asp-for="ComfirmPassword" placeholder="和密码相同">
+        <span asp-validation-for="ComfirmPassword"></span>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputEmail1">验证码：（* 必填） </label>
+        <input type="text" class="form-control" style="width:100px" asp-for="VerifyCode">
+        <span asp-validation-for="VerifyCode"></span>
+        <span style="display:inline-block">点击输入框显示</span>
+    </div>
+    @*<div class="form-group">
+            <label for="exampleInputEmail1">个人主页：（* 必填） </label>
+            <input type="text" class="form-control" asp-for="HomeUrl">
+            <span asp-validation-for="HomeUrl"></span>
+        </div>*@
+    <button class="btn btn-primary" id="submit" type="submit">提交</button>
+    <button class="btn btn-light" type="reset">重置</button>
+    <a href="logon.html" class=" btn float-right text-primary"><i class="fa fa-sign-in" aria-hidden="true"></i>登录</a>
+
+</form>
 
 
 
@@ -75,7 +75,49 @@
         <li><a href="about/us"><i class="fa fa-hand-o-right" aria-hidden="true"></i>了解更多</a></li>
     </ol>
 }
+<script>
 
+    //4.参考注册页面：
+    //   提交时，如果用户名重复（已有用户名用数组保存），阻止form提交，提示“用户名重复”。
+    //   重新输入用户名，一旦输入用户名部分没有重复，“用户名重复”的提示消失
+    //   当用户名或密码等有值时，关闭页面前弹出确认框
+    var username = document.getElementById("username");
+    username.onblur = function () {
+        var usernames = ["zl", "zll", "zouli"]
+        for (var i of usernames) {
+            if (username.value == i) {
+                var remind = document.createElement("span");
+                remind.setAttribute('id', 'errorname');  
+                remind.innerText = "用户名重复";
+                remind.style.backgroundColor = "pink"
+                remind.style.color = "black";
+                username.parentElement.appendChild(remind);//？？
+                document.getElementsByTagName("form")[0].onsubmit = function (event) {
+                    event.preventDefault();
+                }
+            }//else
+        }
+    }
+    //   重新输入用户名，一旦输入用户名部分没有重复，“用户名重复”的提示消失
+    username.onkeyup = function () {
+        var usernames = ["zl", "zll", "zouli"]
+        for (var i of usernames) {
+            if (username.value != i) {
+                var remind = document.getElementById("errorname");
+                remind.remove();
+                }
+            }//else
+    }
+    //   当用户名或密码等有值时，关闭页面前弹出确认框
+    window.onload = function () {
+        if (this.document.getElementById("username").value !=''|| this.document.getElementById("password").value != '') {
+            return '关闭提示:用户名或密码有值,是否关闭';
+        }//   
+    };
+    
+
+
+</script>
 
 
 
