JavaScript：事件：常用类型详述 一点点

--- a/SourceStack/Pages/Message/Index.cshtml
+++ b/SourceStack/Pages/Message/Index.cshtml
@@ -17,8 +17,9 @@
     }
     <button  type ="submit" >已读就勾选</button>
 </form>
-<script src="~/js/Event.js"></script>
-@*<script>
+
+@*<script src="~/js/Event.js"></script>*@
+<script>
     document.getElementById("selectall").addEventListener("change",
         function () {
             var messages = document.getElementsByName("message");
@@ -28,4 +29,4 @@
         }
     )
   
-</script>*@
+</script>
