--- a/SourceStack/Pages/Home/Index.cshtml
+++ b/SourceStack/Pages/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "Layout/_Dual";
 }
-<div class="" style="overflow:scroll">
+<div class="" id="content"  style="overflow:scroll;">
     <div>
         <a href="none" style="padding-left:260px;">更多历史</a>
     </div>
@@ -126,4 +126,12 @@
         <img class="img-responsive center-block" src="/images/二维码.png" title="QQ学习群：326801052">
     </div>
 }
+<script>
+    //参考一起帮首页，实现右侧漂浮并底对齐左侧文本框的效果
 
+  
+       
+
+    
+
+</script>
