--- a/SourceStack/Pages/Shared/_Layout.cshtml
+++ b/SourceStack/Pages/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <title>@ViewData["Title"]--源站 </title>
     <link href="/image/logo-big.ico" rel="shortcut icon" media="screen" type="image/x-icon" />
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @*<link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />*@
     <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
