--- a/SourceStack/Pages/Shared/Layout/_Dual.cshtml
+++ b/SourceStack/Pages/Shared/Layout/_Dual.cshtml
@@ -11,6 +11,6 @@
     </div>
     <div class="col-md-5 offset-md-1">
         <h3><i class="fa fa-question-circle" aria-hidden="true"></i>说明</h3>
-        @RenderSection("Description")
+        @RenderSection("Description", required: false)
     </div>
 </div>
