--- a/SourceStack/Pages/Shared/Layout/_Dual2.cshtml
+++ b/SourceStack/Pages/Shared/Layout/_Dual2.cshtml
@@ -11,6 +11,6 @@
     </div>
     <div class="col-md-3 ">
         <h3><i class="fa fa-question-circle" aria-hidden="true"></i>说明</h3>
-        @RenderSection("Description")
+        @RenderSection("Description",required: false)
     </div>
 </div>
