--- a/YQBangMVC/Views/Shared/_Layout.cshtml
+++ b/YQBangMVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel=" shortcut icon " type="image/x-icon" href="~/Images/logo-big.ico" media="screen" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/font-awesome.css" />
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/Scripts/KindEditer/kindeditor-all.js"></script>
