--- a/YQBangMVC/Views/Article/Single.cshtml
+++ b/YQBangMVC/Views/Article/Single.cshtml
@@ -9,7 +9,7 @@
 </header>
 <hr>
 <i class="fa fa-calendar" aria-hidden="true"></i><small class="text-secondary"> @Model.PublishTime</small>
-<span style="float:right">@Model.AuthorName<a href="#">Model.Article.Author.Name</a></span>
+<span style="float:right">作者名字<a href="#">@Model.AuthorName</a></span>
 <article>
     @Model.Body
 </article>
