RazorPage里的 ajax Post请求

--- a/JSHomeWork/Pages/Index.cshtml
+++ b/JSHomeWork/Pages/Index.cshtml
@@ -3,8 +3,10 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<div>
+    <h1>我是Border页面</h1>
+    <h3>@DateTime.Now</h3>
+    <h4>名字：@Model.username</h4>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
